* 変更点一覧

** 2.5.0-dev

*** features

- ソースコード全体をUTF-8化
-- 但し、日本語のソースコードコメントはそのまま
- 国際化 (i18n) のための機能追加および変更
-- [Breaking B.C] 言語名として解釈していた部分をロケール名に変更
--- これにより、[appid]template/ja, [appid]/locale/ja の「ja」の部分が ja_JP に置き換わります。よって、古いバージョンから移行する場合はディレクトリ名の変更が必要です。
--- Ethna.php で定義されていた、LANG_JA, LANG_EN はこの変更により使用されないので削除
-- [Breaking B.C] gettext を使用する際には [appid]/etc/[appid]-ini.php で 'use_gettext' => true と設定しないと gettext を使わないようにした
--- 2.3.5 までのコードは、gettext.so がロードされていれば *無条件に* gettext が実行されるようになっているので、Ethna 独自のメッセージカタログとの選択がわかりづらいため。
--- 2.3.5までのコードで gettext を利用している場合は、設定が明示的に必要です。
-- "ethna add-project" コマンドに [-l|locale] オプションを追加
-- スケルトンの日本語コメントをすべてASCIIに変更(好みのエンコーディングで編集できるようにするため)
- [Breaking B.C] レンタルサーバを考慮して、[appid]_Controllerの include_path を、[appid]/lib を優先するように変更
-- include_path の順番に依存するコードは少ないとは思いますが、移行の際は注意すべきです。
- "ethna add-project" コマンドに [-s|skeldir] オプションを追加
-- 指定されたスケルトンディレクトリに、ETHNA_HOME/skel と同じファイル名のものが存在する場合はそちら
   を優先した上で、ETHNA_HOME/skel にないファイルは [appid]/skel にコピーする

** 2.3.5

*** features

- PEAR チャンネルサーバに ethna/simpletest, ethna/Smarty を追加
-- インストール後のsimpletest, Smartyのパスで悩む罠を軽減することが目的
-- pear コマンドで Ethna をインストールするときにこれらを Optional に依存するように設定。既存のインストールを考慮して、required にはしていない。
- Ethnaコマンドに一般的なテストケースコマンドとして add-test コマンドを追加(thanks: BoBpp)
-- ethna add-test -s [skelname] [name] で実行できます
-- http://blog.as-roma.com/BoBlog/index.php?itemid=1338
-- これは自動登録されるため、[appid]_UnitTestManager に定義を追加する必要はありません(thanks: id:okonomi)
--- http://d.hatena.ne.jp/okonomi/20080408
- Ethna_Renderer_Rhacoを追加(experimental)
- Ethna_DB_ADOdbのdebug時のログ出力をEthnaのLoggerに変更(@see http://d.hatena.ne.jp/sotarok/20071224)
- Ethna add-[|action|view]-test コマンドで生成されるテストケースがデフォルトでfailするように改善
- Ethna のユニットテスト実行時に [appid]/etc/[appid]-ini.php のデバッグ設定がfalseの場合のエラー処理を改善
-- エラー処理をphpに任せて画面を真っ白にするのではなく、親切なエラーメッセージを表示する
- [action|view] のユニットテスト生成時、対応するアクション(ビュー)スクリプトがない場合は警告を生成するようにした。
- Ethna の add-[action|view] コマンドで、同時にユニットテストを作成できるようにするオプションを追加。